--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Катерина Языковая</title>
+    <script src="https://cdn.jsdelivr.net/gh/cferdinandi/smooth-scroll/dist/smooth-scroll.polyfills.min.js"></script>
     <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
     <script src="./script/script.js" defer></script>
     <link rel="stylesheet" href="https://unpkg.com/swiper@8/swiper-bundle.min.css"/>
@@ -18,27 +19,40 @@
             <div class="hamburger-menu">
                 <input id="menu__toggle" type="checkbox" />
                 <label class="menu__btn" for="menu__toggle">
-                  <span></span>
+                  <span class="btn-span"></span>
                 </label>
             
                 <ul class="menu__box">
-                  <li><a class="menu__item" href="#">Миссия</a></li>
-                        <li><a class="menu__item" href="#">о себе</a></li>
-                        <li><a class="menu__item" href="#">кейсы</a></li>
-                        <li><a class="menu__item" href="#">тарифы</a></li>
-                        <li><a class="menu__item" href="#">услуги</a></li>
-                        <li><a class="menu__item" href="#">отзывы</a></li>
+                  <li><a class="menu__item" href="#mission">Миссия</a></li>
+                        <li><a class="menu__item" href="#about">о себе</a></li>
+                        <li><a class="menu__item" href="#cases">кейсы</a></li>
+                        <li><a class="menu__item" href="#rates">тарифы</a></li>
+                        <li><a class="menu__item" href="#services">услуги</a></li>
+                        <li><a class="menu__item" href="#reviews">отзывы</a></li>
+                        <li>
+                            <div class="social social-mobile">
+                                <a href="#"><img src="./images/whatsapp-black.png" alt="whatsapp"></a>
+                                <a href="#"><img src="./images/instagram-black.png" alt="intagram"></a>
+                                <a href="#"><img src="./images/telegram-black.png" alt="telegram"></a>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="lang lang-mobile">
+                                <a href=""><img src="./images/Ru-big-black.png" alt="ru"></a>
+                                <a href=""><img src="./images/en-big-black.png" alt="en"></a>
+                            </div>
+                        </li>
                 </ul>
             </div>
             <div class="container pc-menu">
                 <div class="header-menu-content">
                     <ul>
-                        <li>Миссия</li>
-                        <li>о себе</li>
-                        <li>кейсы</li>
-                        <li>тарифы</li>
-                        <li>услуги</li>
-                        <li>отзывы</li>
+                        <li><a href="#mission">Миссия</a></li>
+                        <li><a href="#about">о себе</a></li>
+                        <li><a href="#cases">кейсы</a></li>
+                        <li><a href="#rates">тарифы</a></li>
+                        <li><a href="#services">услуги</a></li>
+                        <li><a href="#reviews">отзывы</a></li>
                     </ul>
                     <div class="social-lang">
                         <div class="social-header">
@@ -47,7 +61,7 @@
                             <a href="#"><img src="./images/telegram.png" alt="telegram"></a>
                         </div>
                         <div class="lang">
-                            <a href=""><img src="./images/ru.png" alt="ru"></a>
+                            <a href=""><img src="./images/ru-big.png" alt="ru"></a>
                             <a href=""><img src="./images/en.png" alt="en"></a>
                         </div>
                     </div>
@@ -65,28 +79,28 @@
             </div>
         </header>
         <main>
-            <section class="misson">
+            <section class="misson" id="mission">
                 <div class="container">
                     <div class="mission-content">
                         <div class="mission-column-1">
-                            <img src="./images/Rectangle 7.jpg" alt="img">
+                            <img src="./images/Rectangle 7.jpg" alt="img" class="mission-colum-img">
                             <div class="mission-text-left">
                                 <p class="text-left-1">Катерина Языкова</p>
-                                <p class="text-left-2">‌СПОРТИВНЫЙ ТРЕНЕР WELLNESS COACH</p>
+                                <p class="text-left-2">‌СПОРТИВНЫЙ ТРЕНЕР<br> WELLNESS COACH</p>
                             </div>
                         </div>
                         <div class="mission-column-2">
                             <div class="mission-text-right">
                                 <p class="text-right-1">Моя миссия</p>
-                                <p class="text-right-2">‌Помощь людям в избавлении от внутренних проблем и выстраивании фундамента для здорового образа жизни.</p>
+                                <p class="text-right-2">‌Помощь людям в избавлении от<br> внутренних проблем и<br> выстраивании фундамента для<br> здорового образа жизни.</p>
                             </div>
-                            <img src="./images/Rectangle 8.jpg" alt="img">
+                            <img src="./images/Rectangle 8.jpg" alt="img" class="mission-colum-img">
                         </div>
                     </div>
                     <h2 class="about-text">О себе</h2>
                 </div>
             </section>
-            <section class="about">
+            <section class="about" id="about">
                 <div class="arrow-slider-mobile">
                     <img src="./images/left.png" alt="arrow-left" class="mobile-slider-about-left">
                     <img src="./images/right.png" alt="arrow-right" class="mobile-slider-about-right">
@@ -261,12 +275,12 @@
                             </div>
                         </div>
                         <div class="mentoring-image">
-                            <img src="./images/diagram.png" alt="diagramma">
+                            <img src="./images/diagram.png" alt="diagramma" class="diagramma">
                         </div>
                     </div>
                 </div>
             </section>
-            <section class="cases">
+            <section class="cases" id="cases">
                 <div class="container mod-cont">
                     <div class="cases-content">
                         <h2 class="cases-text">кейсы</h2>
@@ -281,7 +295,7 @@
                                             </div>
                                             <img src="./images/fitness-body.png" alt="fitness-body" class="fitness-body">
                                         </div>
-                                        <img src="./images/cases-slide-1.jpg" alt="cases-img">
+                                        <img src="./images/cases-slide-1.jpg" alt="cases-img" class="cases-slide-image">
                                         <p class="cases-slide-text">«До работы с Катей у меня были проблемы с уверенностью в себе и мотивацией. Я была недовольна своей внешностью и...<span class="underline">Читать еще</span></p>
                                     </div>
                                 </div>
@@ -379,7 +393,7 @@
                 </div>
             </section>
             <h3 class="tagline-team">слоган или призыв присоединиться к команде, получить услугу и тд</h3>
-            <section class="rates">
+            <section class="rates" id="rates">
                 <div class="container">
                     <div class="rates-content">
                         <h2 class="rates-text">Тарифы</h2>
@@ -446,7 +460,7 @@
                     </div>
                 </div>
             </section>
-            <section class="individual-services">
+            <section class="individual-services" id="services">
                 <div class="container">
                     <div class="services-content">
                         <img src="./images/atmosphere.png" alt="atmosphere" class="atmosphere">
@@ -466,6 +480,24 @@
                                 круговая тренировка</p>
                             <button class="service-button">Забронировать время</button>
                         </div>
+                        <div class="services-info-mobile">
+                            <p class="our-services our-services-mobile">отдельные услуги :</p>
+                            <div class="services-info-mobile-content">
+                                <div class="arrow-text-mobile">
+                                    <p class="arrow-text-barre">Барре:<br> индивидуальная<br> онлайн тренировка,<br> 55 мин</p>
+                                    <img src="./images/arrow-right-black.png" alt="arrow" class="image-arrow-mobile">
+                                    <p class="arrow-text-price">2500 рублей</p>
+                                </div>
+                                <div class="arrow-text-mobile">
+                                    <p class="arrow-text-barre">Барре:<br> групповая онлайн<br> тренировка,<br> 55 мин</p>
+                                    <img src="./images/arrow-right-black.png" alt="arrow" class="image-arrow-mobile">
+                                    <p class="arrow-text-price">2000 рублей</p>
+                                </div>
+                            </div>
+                            <p class="any-training-text">Вместо Барре Вы можете выбрать любую тренировку из перечисленных: HIIT, силовой тренинг, 
+                                круговая тренировка</p>
+                            <button class="service-button service-button-mobile">Забронировать время</button>
+                        </div>
                     </div>
                 </div>
             </section>
@@ -477,7 +509,7 @@
                         </div>
                 </div>
             </section>
-            <section class="reviews">
+            <section class="reviews" id="reviews">
                 <div class="container">
                     <h2 class="reviews-text">отзывы</h2>
                     <div class="swiper reviews-slider">
