--- a/index.html
+++ b/index.html
@@ -84,10 +84,10 @@
                     <div class="mission-content">
                         <div class="mission-column-1">
                             <img src="./images/Rectangle 7.jpg" alt="img" class="mission-colum-img">
-                            <div class="mission-text-left">
+                            <!-- <div class="mission-text-left"> -->
                                 <p class="text-left-1">Катерина Языкова</p>
                                 <p class="text-left-2">‌СПОРТИВНЫЙ ТРЕНЕР<br> WELLNESS COACH</p>
-                            </div>
+                            <!-- </div> -->
                         </div>
                         <div class="mission-column-2">
                             <div class="mission-text-right">
